# dtu_mlops

./: .gitignore  copilot.py  model.pth  pyproject.toml  torch_main.py
final_exercise_DL/: data.py  model.pth  model.py
joel/: .gitignore  main.py  pyproject.toml
joel/final_exercise_DL/: main.py
log/vae_profile_train/: LAPTOP-E0BGNU52_15772.1769416834165145600.pt.trace.json  LAPTOP-E0BGNU52_15772.1769416834654636400.pt.trace.json  LAPTOP-E0BGNU52_16984.1769416192589512600.pt.trace.json  LAPTOP-E0BGNU52_16984.1769416193098034300.pt.trace.json
s2_organisation_and_version_control/exercise_files/: typer_exercise.py
s4_debugging_and_logging/exercise_files/: my_own_logger.py  profile.prof  profile.txt  pytorch_profiler.py  read_cprofile.py  sweep.yaml  trace.json  vae_mnist_bugs.py
s4_debugging_and_logging/exercise_files/log/resnet18/: LAPTOP-E0BGNU52_20908.1769161074016746600.pt.trace.json
s4_debugging_and_logging/exercise_files/log/vae_profile_eval/: LAPTOP-E0BGNU52_1836.1769163881600203200.pt.trace.json
wandb/run-20260126_092933-1e5fmuz0/: run-1e5fmuz0.wandb
wandb/run-20260126_092933-1e5fmuz0/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260126_093713-mfsq0ywb/: run-mfsq0ywb.wandb
wandb/run-20260126_093713-mfsq0ywb/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260126_094016-yq21rm0s/: run-yq21rm0s.wandb
wandb/run-20260126_094016-yq21rm0s/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+2 files in other folders)
