[project]
name = "joel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.2.2",
    "torch>=2.9.1",
    "matplotlib>=3.8.0",
    "torchvision>=0.15.2",
    "ipykernel>=6.25.2",
    "jupyterlab>=4.0.2",
    "gdown>=5.2.1",
    "typer>=0.21.1",
    "snakeviz>=2.2.2",
    "torch-tb-profiler>=0.4.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "wandb>=0.24.0",
]

[project.optional-dependencies]
dataframes = [
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
